--- a/highlights.html
+++ b/highlights.html
@@ -14,7 +14,7 @@ title: Matthew Cobbs &raquo; Career Highlights
         <div class="span8">
             <h3>Ford &raquo; My Saved Items</h3>
 
-            <ul class="unstyled">
+            <ul class="unstyled well well-small">
                 <li><a href="http://www.ford.com/mysaveditems/">http://www.ford.com/mysaveditems/</a></li>
                 <li><a href="http://www.lincoln.com/mysaveditems/">http://www.lincoln.com/mysaveditems/</a></li>
                 <li><a href="http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/" data-toggle="tooltip" title="See the &lsquo;Save&rsquo; link">http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/</a></li>
@@ -32,10 +32,8 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <div class="thumbnail">
-                <img src="/img/projects/mysaveditems.png" width="400" height="250" alt="Ford &raquo; My Saved Items"/>
-                <p class="caption muted"><em>2012 (Team Detroit)</em></p>
-            </div>
+            <img src="/img/projects/mysaveditems.png" width="400" height="250" alt="Ford &raquo; My Saved Items"/>
+            <p class="muted"><em>2012 (Team Detroit)</em></p>
         </div>
     </div>
 
@@ -56,10 +54,8 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <div class="thumbnail">
-                <img src="/img/projects/onstar.png" width="400" height="250" alt="OnStar &raquo; Experience OnStar"/>
-                <p class="caption muted">2011 (Digitas)</p>
-            </div>
+            <img src="/img/projects/onstar.png" width="400" height="250" alt="OnStar &raquo; Experience OnStar"/>
+            <p class="muted">2011 (Digitas)</p>
         </div>
     </div>
 
@@ -82,10 +78,8 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <div class="thumbnail">
-                <img src="/img/projects/reviews.png" width="400" height="250" alt="Ford &raquo; Ratings and Reviews"/>
-                <p class="caption muted">2012 (Team Detroit)</p>
-            </div>
+            <img src="/img/projects/reviews.png" width="400" height="250" alt="Ford &raquo; Ratings and Reviews"/>
+            <p class="muted">2012 (Team Detroit)</p>
         </div>
     </div>
 
@@ -105,10 +99,8 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4">
-            <div class="thumbnail">
-                <img src="/img/projects/stitches.png" width="400" height="250" alt="Stitches"/>
-                <p class="caption muted">2012</p>
-            </div>
+            <img src="/img/projects/stitches.png" width="400" height="250" alt="Stitches"/>
+            <p class="muted">2012</p>
         </div>
     </div>
 
