--- a/highlights.html
+++ b/highlights.html
@@ -41,7 +41,7 @@ title: Matthew Cobbs &raquo; Career Highlights
         <div class="span8">
             <h3>OnStar &raquo; Experience OnStar</h3>
 
-            <ul class="unstyled">
+            <ul class="unstyled well well-small">
                 <li><a href="https://www.onstar.com/web/portal/experienceonstar">https://www.onstar.com/web/portal/experienceonstar</a></li>
             </ul>
 
@@ -63,7 +63,7 @@ title: Matthew Cobbs &raquo; Career Highlights
         <div class="span8">
             <h3>Ford &raquo; Ratings and Reviews</h3>
 
-            <ul class="unstyled">
+            <ul class="unstyled well well-small">
                 <li><a href="http://www.ford.com/cars/fusion/reviews/">http://www.ford.com/cars/fusion/reviews/</a></li>
             </ul>
 
@@ -87,7 +87,7 @@ title: Matthew Cobbs &raquo; Career Highlights
         <div class="span8">
             <h3>Stitches</h3>
 
-            <ul class="unstyled">
+            <ul class="unstyled well well-small">
                 <li><a href="http://draeton.github.com/stitches/">http://draeton.github.com/stitches/</a></li>
             </ul>
 
