--- a/highlights.html
+++ b/highlights.html
@@ -25,9 +25,9 @@ title: Matthew Cobbs &raquo; Career Highlights
             </p>
         </div>
 
-        <div class="span4">
+        <div class="span4 highlight-thumbnail">
             <img src="/img/projects/stitches.png" width="400" height="250" alt="Stitches"/>
-            <p class="muted">2012</p>
+            <p class="caption">2012</p>
         </div>
     </div>
 
@@ -52,9 +52,9 @@ title: Matthew Cobbs &raquo; Career Highlights
             </p>
         </div>
 
-        <div class="span4">
+        <div class="span4 highlight-thumbnail">
             <img src="/img/projects/mysaveditems.png" width="400" height="250" alt="Ford &raquo; My Saved Items"/>
-            <p class="muted"><em>2012 (Team Detroit)</em></p>
+            <p class="caption"><em>2012 (Team Detroit)</em></p>
         </div>
     </div>
 
@@ -74,9 +74,9 @@ title: Matthew Cobbs &raquo; Career Highlights
             </p>
         </div>
 
-        <div class="span4">
+        <div class="span4 highlight-thumbnail">
             <img src="/img/projects/onstar.png" width="400" height="250" alt="OnStar &raquo; Experience OnStar"/>
-            <p class="muted">2011 (Digitas)</p>
+            <p class="caption">2011 (Digitas)</p>
         </div>
     </div>
 
@@ -98,9 +98,9 @@ title: Matthew Cobbs &raquo; Career Highlights
             </p>
         </div>
 
-        <div class="span4">
+        <div class="span4 highlight-thumbnail">
             <img src="/img/projects/reviews.png" width="400" height="250" alt="Ford &raquo; Ratings and Reviews"/>
-            <p class="muted">2012 (Team Detroit)</p>
+            <p class="caption">2012 (Team Detroit)</p>
         </div>
     </div>
 
