--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ title: Matthew Cobbs, Detroit Web Developer
         </section>
 
         <section id="blogposts" class="span6">
-            <h3>Posts <small><a href="/archives.html">read all &raquo;</a></small></h3>
+            <h3><a href="/archives.html">Posts</a></h3>
 
         {% for post in site.posts limit:6 %}
 
