--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Matthew Cobbs, Detroit Web Developer
 
             <h5><a href="{{ post.url }}"
                 {% if post.teaser %}
-                    data-toggle="tooltip" data-placement="right" title="{{ post.teaser }}"
+                    data-toggle="tooltip" data-placement="top" title="{{ post.teaser }}"
                 {% endif %}
                 >{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h5>
 
