--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ title: Matthew Cobbs, Detroit Web Developer
         </section>
 
         <section id="blogposts" class="span6">
-            <h3>Posts <small><a href="/archives.html">Read all &raquo;</a></small> <a href="#" class="btn btn-mini btn-primary">Read all &raquo;</a></h3>
+            <h3>Posts <a href="#" class="btn btn-mini btn-primary">Read all &raquo;</a></h3>
 
         {% for post in site.posts limit:6 %}
 
