--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Matthew Cobbs, Detroit Web Developer
         <section id="osprojects" class="span6">
             <h3>Open Source Projects</h3>
 
-            <h4><img src="https://raw.github.com/draeton/tanchor/master/status.png" alt="build status"/><i class="icon-briefcase"></i> <a href="/stitches">Stitches</a><br/>
+            <h4><i class="icon-briefcase"></i> <a href="/stitches">Stitches</a><br/>
                 <small>An HTML5 sprite generator.</small></h4>
             <h4><i class="icon-briefcase"></i> <a href="/lockdown">Lockdown</a><br/>
                 <small>Obfuscates code snippets by writing them to the canvas.</small></h4>
