--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@ title: Matthew Cobbs, Detroit Web Developer
 <!-- start .hero-unit -->
 <div class="hero-unit">
     <h1>Matthew Cobbs</h1>
-    <p>Matthew Cobbs is a 31-year-old web developer from Detroit. As both an in-house and
-        freelance developer, he has several years of experience with planning, designing,
-        developing, and maintaining websites. Matthew loves sushi, Almodovar, <em data-toggle="tooltip" title="Cormac McCarthy, Stephen King, Jack Kerouac, Jon Krakauer, Jane Austen&hellip;">good</em> fiction,
-        and JavaScript.</p>
+    <p>Matthew Cobbs is a 31-year-old web developer from Detroit. As both an in-house and freelance developer, he has several years of experience with planning, designing, developing, and maintaining websites. Matthew loves sushi, Almodovar, <em data-toggle="tooltip" title="Cormac McCarthy, Stephen King, Jack Kerouac, Jon Krakauer, Jane Austen&hellip;">good</em> fiction, and JavaScript. He works at <a href="http://slashdot.org">Slashdot</a>, and is <a href="#freelance" data-toggle="modal">available for freelance</a>.</p>
 
     <div>
         <div class="btn-group btn-contacts-wired hidden-phone hidden-tablet">
@@ -71,3 +68,19 @@ title: Matthew Cobbs, Detroit Web Developer
     <div class="fb-comments" data-href="http://draeton.github.com/" data-num-posts="10" data-width="940"></div>
 </section>
 <!-- end section -->
+
+<!-- start modal -->
+<div id="freelance" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="freelanceTitle" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="freelanceTitle">Modal header</h3>
+    </div>
+    <div class="modal-body">
+        <p>One fine body…</p>
+    </div>
+    <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button class="btn btn-primary">Send</button>
+    </div>
+</div>
+<!-- end modal -->
