--- a/index.html
+++ b/index.html
@@ -73,10 +73,33 @@ title: Matthew Cobbs, Detroit Web Developer
 <div id="freelance" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="freelanceTitle" aria-hidden="true">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="freelanceTitle">Modal header</h3>
+        <h3 id="freelanceTitle">Submit a project</h3>
     </div>
     <div class="modal-body">
-        <p>One fine body…</p>
+        <p>Need help? Mind you, freelance doesn&rsquo;t mean free&hellip;</p>
+
+        <form class="form-horizontal" action="mailto:draeton@gmail.com" method="get">
+            <input type="hidden" name="subject" value="draeton.github.com : projects"/>
+            <div class="control-group">
+                <label class="control-label" for="inputName">Name</label>
+                <div class="controls">
+                    <input type="text" id="inputName" placeholder="Full Name">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="inputEmail">Email</label>
+                <div class="controls">
+                    <input type="text" id="inputEmail" placeholder="Email">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="inputDescription">Project</label>
+                <div class="controls">
+                    <textarea rows="10" id="inputDescription"></textarea>
+                </div>
+            </div>
+        </form>
+
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
