--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ title: Matthew Cobbs, Detroit Web Developer
         <h3 id="freelanceTitle">Submit a project</h3>
     </div>
     <div class="modal-body">
-        <p>Need help? Mind you, freelance doesn&rsquo;t mean free&hellip;</p>
+        <p>Need help? <span class="muted">(Mind you, freelance doesn&rsquo;t mean free&hellip;)</span></p>
 
         <form class="form-horizontal" action="mailto:draeton@gmail.com" method="get">
             <input type="hidden" name="subject" value="draeton.github.com : projects"/>
