--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@ title: Matthew Cobbs, Detroit Web Developer
             <div class="control-group">
                 <label class="control-label" for="inputName">Name</label>
                 <div class="controls">
-                    <input type="text" id="inputName" placeholder="Full Name">
+                    <input type="text" id="inputName" required placeholder="Full Name">
                 </div>
             </div>
             <div class="control-group">
                 <label class="control-label" for="inputEmail">Email</label>
                 <div class="controls">
-                    <input type="text" id="inputEmail" placeholder="Email">
+                    <input type="text" id="inputEmail" required placeholder="Email">
                 </div>
             </div>
             <div class="control-group">
                 <label class="control-label" for="inputDescription">Project</label>
                 <div class="controls">
-                    <textarea rows="10" id="inputDescription"></textarea>
+                    <textarea name="body" rows="10" id="inputDescription" required placeholder="Tell me something about your project"></textarea>
                 </div>
             </div>
         </form>
