fixing form validation

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ title: Matthew Cobbs, Detroit Web Developer
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-        <button id="freelanceSend" class="btn btn-primary" data-dismiss="modal">Send</button>
+        <button id="freelanceSend" class="btn btn-primary">Send</button>
     </div>
 </div>
 <!-- end modal -->
