--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Matthew Cobbs, Detroit Web Developer
 <!-- start .hero-unit -->
 <div class="hero-unit">
     <h1>Matthew Cobbs</h1>
-    <p>Matthew Cobbs is a 31-year-old web developer from Detroit. As both an in-house and freelance developer, he has several years of experience with planning, designing, developing, and maintaining websites. Matthew loves sushi, Almodovar, <em data-toggle="tooltip" title="Cormac McCarthy, Stephen King, Jack Kerouac, Jon Krakauer, Jane Austen&hellip;">good</em> fiction, and JavaScript. His current gig is with <a href="http://slashdot.org">Slashdot</a>, and he is <a href="#freelance" data-toggle="modal">available for freelance</a>.</p>
+    <p>Matthew Cobbs is a 31-year-old web developer from Detroit. As both an in-house and freelance developer, he has several years of experience with planning, designing, developing, and maintaining websites. Matthew loves sushi, Almodovar, <em data-toggle="tooltip" title="Cormac McCarthy, Stephen King, Jack Kerouac, Jon Krakauer, Jane Austen&hellip;">good</em> fiction, and JavaScript. He is <a href="#freelance" data-toggle="modal">available for freelance</a>.</p>
 
     <div>
         <div class="btn-group btn-contacts-wired hidden-phone hidden-tablet">
