adding kfc project and code samples

--- a/highlights.html
+++ b/highlights.html
@@ -20,9 +20,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
             <p>This is a personal open source project that received a <a href="http://www.twylah.com/smashingmag/tweets/226007275523936256">mention from Smashing Magazine</a>, was <a href="http://html5weekly.com/archive/79.html">twice-included</a> in the <a href="http://html5weekly.com/">HTML5 Weekly</a> newsletter, and drives over 5000 visitors a month to my personal site. It demonstrates the ability to work with the new HTML5 APIs. Visitors to the repository also see the use of build scripts (Grunt), automated JavaScript documentation (Docker), minification (Uglify), linting (JSHint), and unit testing (QUnit).</p>
 
-            <p>Code samples —
-                <a href="https://github.com/draeton/stitches/tree/master/src">1</a>
-            </p>
+            <p><a href="https://github.com/draeton/stitches/tree/master/src">Code sample</a></p>
         </div>
 
         <div class="span4 highlight-thumbnail">
@@ -43,13 +41,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
             <p>This project involved adding a new feature to the Ford brand websites, including the Save widget, which is syndicated across all Ford shopping tools sites (e.g. Search Dealer Inventory, Certified Pre-Owned). I was the lead front-end developer on this project, which involved integrating code and efforts from a number of different vendors. I am responsible for the front-end code architecture. It demonstrates working with 3rd party authentication, RESTful APIs, JavaScript templates, and URL hash-based navigation.</p>
 
-            <p>Code samples —
-                <a href="http://www.ford.com/ngtemplates/ngassets/js/ngbs.u.anchor.js">1</a>,
-                <a href="http://www.ford.com/ngtemplates/ngassets/js/ngbs.u.deeplink.js">2</a>,
-                <a href="http://www.ford.com/ngtemplates/ngassets/com/global/templates/mysaveditems/mysaveditems.data.js">3</a>,
-                <a href="http://www.ford.com/ngtemplates/ngassets/com/global/templates/mysaveditems/mysaveditems.page.js">4</a>,
-                <a href="http://www.ford.com/ngtemplates/ngassets/com/global/widgets/save/ng_save.js">5</a>
-            </p>
+            <p><a href="https://gist.github.com/draeton/4285da1f539cc00d7eed">Code sample</a></p>
         </div>
 
         <div class="span4 highlight-thumbnail">
@@ -68,10 +60,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
             <p>This project was essentially a port of an existing Flash module to HTML5, with some additional functionality involved. I was the lead front-end developer on the project. It demonstrates the use of (once again) JavaScript templates, URL hash-based navigation, and the incorporation of 3rd party APIs from Brightcove for HTML5 video. I also rewrote the OnStar Omniture tracking module to be faster and more standards compliant.</p>
 
-            <p>Code samples —
-                <a href="https://www.onstar.com/tunnel-web/webdav/portal/document_library/js/experience-onstar/lounge.js">1</a>,
-                <a href="https://www.onstar.com/tunnel-web/webdav/portal/document_library/js/onstar_tracking.js">2</a>
-            </p>
+            <p><a href="https://gist.github.com/draeton/be36b3b5ba1219baeaa1">Code sample</a></p>
         </div>
 
         <div class="span4 highlight-thumbnail">
@@ -90,17 +79,31 @@ title: Matthew Cobbs &raquo; Career Highlights
 
             <p>This project involved adding a new section to the Ford website. I was the lead front-end developer on this project. I am responsible for the front-end architecture, for which I decided to take a widget-based approach. It demonstrates the use of RESTful APIs and event-based module development.
 
-            <p>Code samples —
-                <a href="http://www.ford.com/ngtemplates/ngassets/com/forddirect/ng/views/nameplate/ratings-and-reviews/core/reviews.js">1</a>,
-                <a href="http://www.ford.com/ngtemplates/ngassets/com/forddirect/ng/widgets/ratings-and-reviews/reviews/reviews.js">2</a>,
-                <a href="http://www.ford.com/ngtemplates/ngassets/com/forddirect/ng/widgets/ratings-and-reviews/radio/radio.js">3</a>,
-                <a href="http://www.ford.com/ngtemplates/ngassets/com/forddirect/ng/widgets/ratings-and-reviews/pagination/pagination.js">4</a>
-            </p>
+            <p><a href="https://gist.github.com/draeton/93c00021798c6048e954">Code sample</a></p>
         </div>
 
         <div class="span4 highlight-thumbnail">
             <img src="/img/projects/reviews.png" width="400" height="250" alt="Ford &raquo; Ratings and Reviews"/>
             <p class="caption">2012 (Team Detroit)</p>
+        </div>
+    </div>
+
+    <div class="highlight row-fluid">
+        <div class="span8">
+            <h3>Mercury Studios &raquo; My Local KFC</h3>
+
+            <ul class="unstyled well well-small">
+                <li><a href="http://mylocalkfc.com/">http://mylocalkfc.com/</a></li>
+            </ul>
+
+            <p>Developed a content portal for local KFC franchises to post coupons, promos, pricing, and to allow visitors to create catering menus. I implemented both the front-end, administration section, and MySQL database back-end using the CodeIgniter PHP framework.
+
+            <p><a href="https://gist.github.com/draeton/313490416f6e0585e1ce">Code sample</a></p>
+        </div>
+
+        <div class="span4 highlight-thumbnail">
+            <img src="/img/projects/kfc.png" width="400" height="250" alt="My Local KFC"/>
+            <p class="caption">2010 (Mercury Studios)</p>
         </div>
     </div>
 
