fixing mercury studio spelling

--- a/highlights.html
+++ b/highlights.html
@@ -90,7 +90,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
     <div class="highlight row-fluid">
         <div class="span8">
-            <h3>Mercury Studios &raquo; My Local KFC</h3>
+            <h3>Mercury Studio &raquo; My Local KFC</h3>
 
             <ul class="unstyled well well-small">
                 <li><a href="http://mylocalkfc.com/">http://mylocalkfc.com/</a></li>
@@ -102,8 +102,8 @@ title: Matthew Cobbs &raquo; Career Highlights
         </div>
 
         <div class="span4 highlight-thumbnail">
-            <img src="/img/projects/kfc.png" width="400" height="250" alt="My Local KFC"/>
-            <p class="caption">2010 (Mercury Studios)</p>
+            <img src="/img/projects/kfc.png" width="400" height="250" alt="Mercury Studio &raquo; My Local KFC"/>
+            <p class="caption">2010 (Mercury Studio)</p>
         </div>
     </div>
 
