adding behance link to home page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ title: Matthew Cobbs, Detroit Web Developer
             <a href="http://stackoverflow.com/users/230483/draeton" class="btn" title="Stack Overflow"><i class="contacts contacts-stackoverflow"></i></a>
             <a href="http://twitter.com/draeton/" class="btn" title="Twitter"><i class="contacts contacts-twitter"></i></a>
             <a href="http://draeton.tumblr.com/" class="btn" title="Tumblr"><i class="contacts contacts-tumblr"></i></a>
+            <a href="http://behance.com/draeton" class="btn" title="Behance"><i class="contacts contacts-behance"></i></a>
         </div>
     </div>
 </div>
