--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ title: Matthew Cobbs, Detroit Web Developer
             <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
             <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
             <a href="http://draeton.tumblr.com/" class="btn btn-info">Tumblr</a>
+            <a href="http://behance.com/draeton" class="btn btn-info">Behance</a>
         </div>
     </div>
 
